// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BottomNavigation /> should render properly with children 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#ffffff",
      "display": "flex",
      "height": 56,
      "justifyContent": "center",
      "muiPrepared": true,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="bottomNavigationChildren"
    selected={false}
    style={
      Object {
        "flex": "1",
      }
    }
  />
</div>
`;

exports[`<BottomNavigation /> should render properly with no children 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#ffffff",
      "display": "flex",
      "height": 56,
      "justifyContent": "center",
      "muiPrepared": true,
      "position": "relative",
      "width": "100%",
    }
  }
/>
`;
